[package]
name = "rtain"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
cgroups-rs = "=0.3.4"
rand = "0.8.5"
tabwriter = "1.4.0"
bincode = "1.3.3"
anyhow = "1.0.95"
bitvec = "1.0.1"
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
futures = "0.3.31"
console-subscriber = "0.4.1"

clap = { version = "4.5.17", features = ["derive"] }
nix = { version = "0.29.0", features = [
    "sched",
    "signal",
    "mount",
    "fs",
    "term",
] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
dashmap = { version = "6.1.0", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"
rstest = "0.18"
pretty_assertions = "1.4"
